toolchains/eui-compiler/test/error/baselines/scroller-notGroup/expect.txt
Error: Exml Error: eui.Scroller's child type should be `eui.Group`
                <e:Group1>
                 ^
at line: 6, column: 18
at file: